hphp/hack/test/typecheck/reactive/mayberx11.php.like_types.exp
File "mayberx11.php", line 11, characters 19-20:
Invalid argument (Typing[4203])
File "mayberx11.php", line 4, characters 19-39:
This function is reactive.
File "mayberx11.php", line 9, characters 39-55:
This function is non-reactive.
